RESOLVED FIXED33864
REGRESSION: Infinite recursion in Position::getInlineBoxAndOffset()
https://bugs.webkit.org/show_bug.cgi?id=33864
Summary REGRESSION: Infinite recursion in Position::getInlineBoxAndOffset()
Enrica Casucci
Reported 2010-01-19 13:51:02 PST
REGRESSION: Infinite recursion in Position::getInlineBoxAndOffset()
Attachments
Patch (3.35 KB, patch)
2010-01-19 13:56 PST, Enrica Casucci
simon.fraser: review+
Enrica Casucci
Comment 1 2010-01-19 13:56:52 PST
Simon Fraser (smfr)
Comment 2 2010-01-19 14:10:13 PST
Comment on attachment 46951 [details] Patch > Index: WebCore/ChangeLog > =================================================================== > + REGRESSION: Infinite recursion in Position::getInlineBoxAndOffset() > + https://bugs.webkit.org/show_bug.cgi?id=33864 > + <rdar://problem/7552959> > + > + Regression has been introduced by changeset 53085. > + The original fix had to be limited to editable content. Could you reword this to explain it without reference to the original change? > Index: LayoutTests/editing/selection/selection-applet.html > =================================================================== > --- LayoutTests/editing/selection/selection-applet.html (revision 0) > +++ LayoutTests/editing/selection/selection-applet.html (revision 0) > @@ -0,0 +1,10 @@ > +<body> > +<script language="JavaScript" type="text/javascript"> > +if (window.layoutTestController) > + layoutTestController.dumpAsText(); > + > +document.write('<applet id="test" width="400" height="400" name="test applet" code="test.class" codebase="." mayscript>'); > +document.write('You need Java(tm) to view this presentation. <a href="http://www.java.com">Download Java</a></applet> '); > +window.getSelection().setPosition(document.getElementById("test"), 0); > +</script> > +</body> Does the testcase really require Java, or would a simpler test with divs suffice? Also, is it required to document.write the test content? r=me, but it would be nice to make the testcase more generic if possible.
Enrica Casucci
Comment 3 2010-01-19 14:18:09 PST
Committed revision 53494
Note You need to log in before you can comment on or make changes to this bug.