WebCore: REGRESSION: Infinite recursion in Position::getInlineBoxAndOffset() https://bugs.webkit.org/show_bug.cgi?id=33864 <rdar://problem/7552959>

Reviewed by Simon Fraser.

Regression has been introduced by changeset 53085.
The original fix had to be limited to editable content.

Test: editing/selection/selection-applet.html

* dom/Position.cpp:
(WebCore::Position::getInlineBoxAndOffset):

LayoutTests: REGRESSION: Infinite recursion in Position::getInlineBoxAndOffset()
https://bugs.webkit.org/show_bug.cgi?id=33864
<rdar://problem/7552959>

Reviewed by Simon Fraser.

* editing/selection/selection-applet-expected.txt: Added.
* editing/selection/selection-applet.html: Added.



Canonical link: https://commits.webkit.org/44894@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@53494 268f45cc-cd09-0410-ab3c-d52691b4dbfc